--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next/env": "^14.2.11",
     "autoprefixer": "^10.4.20",
     "aws-amplify": "^6.6.0",
+    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
     "mongodb": "^6.9.0",
