--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@aws-amplify/backend": "^1.2.1",
-    "@aws-sdk/client-ses": "^3.651.1",
+    "@aws-sdk/client-sesv2": "^3.651.1",
     "@aws-sdk/client-sts": "^3.651.1",
     "@aws-sdk/credential-providers": "^3.651.1",
     "@emotion/react": "^11.13.3",
