--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^6.1.0",
     "@mui/styles": "^6.1.0",
     "@next/env": "^14.2.11",
+    "@types/nodemailer": "^6.4.16",
     "autoprefixer": "^10.4.20",
     "aws-amplify": "^6.6.0",
     "bcrypt": "^5.1.1",
@@ -28,6 +29,7 @@
     "mongoose": "^8.6.2",
     "next": "^14.2.11",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.15",
     "postcss": "^8.4.45",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
