Update package.json to original

--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/backend": "^1.2.1",
+    "@aws-sdk/client-ses": "^3.651.1",
+    "@aws-sdk/client-sts": "^3.651.1",
+    "@aws-sdk/credential-providers": "^3.651.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/base": "^5.0.0-beta.40",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/material": "^6.1.0",
+    "@mui/styles": "^6.1.0",
     "@next/env": "^14.2.11",
     "@types/nodemailer": "^6.4.16",
     "autoprefixer": "^10.4.20",
+    "aws-amplify": "^6.6.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.2",
     "next": "^14.2.11",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.15",
